--- a/widget/res/layout/widget.xml
+++ b/widget/res/layout/widget.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="horizontal"
+	android:orientation="vertical"
 	android:background="@android:color/transparent">
 
 	<ImageButton
@@ -13,12 +13,4 @@
 		android:background="@null"
 		android:src="@drawable/btn1"/>
 
-	<TextView
-		android:layout_height="wrap_content"
-		android:text="Info..."
-		android:textAppearance="?android:attr/textAppearanceMedium"
-		android:layout_width="wrap_content"
-		android:id="@+id/widgetTextViewInfo"/>
-
 </LinearLayout>
-
