--- a/widget/res/layout/widget.xml
+++ b/widget/res/layout/widget.xml
@@ -13,4 +13,14 @@
 		android:background="@null"
 		android:src="@drawable/btn1"/>
 
+	<TextView
+		android:layout_height="wrap_content"
+		android:text="@string/hotspot"
+		android:textAppearance="?android:attr/textAppearanceSmall"
+		android:layout_width="wrap_content"
+		android:id="@+id/widgetTextViewInfo"
+		android:shadowColor="#000000"
+		android:textColor="#FFFFFF"/>
+
 </LinearLayout>
+
