--- a/widget/res/layout/widget.xml
+++ b/widget/res/layout/widget.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical"
-	android:background="@android:color/transparent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/bronze"
+    android:orientation="vertical" >
+	
+    <!--  "
+	android:background="@android:color/transparent -->
 
 	<ImageButton
-		android:id="@+id/imageButton1"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:background="@null"
-		android:src="@drawable/btn1"/>
+	    android:id="@+id/imageButton1"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="center_vertical"
+	    android:background="@color/bronze"
+	    android:src="@drawable/btn1" />
 
 	<TextView
 		android:layout_height="wrap_content"
