--- a/widget/res/layout/widget.xml
+++ b/widget/res/layout/widget.xml
@@ -1,29 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/transparent"
-    android:orientation="vertical" >
-	
-    <!--  "
-	android:background="@android:color/transparent -->
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="@android:color/transparent"
+	android:orientation="vertical">
 
 	<ImageButton
-	    android:id="@+id/imageButton1"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_gravity="center_vertical"
-	    android:background="@android:color/transparent"
-	    android:src="@drawable/btn1" />
+		android:id="@+id/imageButton1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|center_horizontal"
+		android:background="@android:color/transparent"
+		android:src="@drawable/btn1"/>
 
 	<TextView
 		android:layout_height="wrap_content"
-		android:text="@string/hotspot"
+		android:text="@string/widget_text"
 		android:textAppearance="?android:attr/textAppearanceSmall"
 		android:layout_width="wrap_content"
-		android:id="@+id/widgetTextViewInfo"
+		android:gravity="center_horizontal"
 		android:shadowColor="#FFFFFF"
-		android:textColor="#000000"/>
+		android:textColor="#000000"
+		android:shadowDx="2"
+		android:shadowRadius="1.0"
+		android:shadowDy="2"
+		android:id="@+id/widgetTextViewInfo"
+		android:ellipsize="end"
+		
+
+		/>
 
 </LinearLayout>
 
